--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     Фритрек и нулевой спринт: Подготовка к работе
                 </h2>
                 <div class="card__img__container">
-                    <img class="card__img saturate-bright" src="./images/Airborne.png" alt="шок" />
+                    <img class="card__img saturate-bright" src="./images/Airborne.jpg" alt="шок" />
                     <p class="watermark">&lt;шок&gt;</p>
                 </div>
                 <div class="card__description">
@@ -67,7 +67,7 @@
             <article class="card">
                 <h2 class="card__title">1 спринт: Я — чистый лист</h2>
                 <div class="card__img__container">
-                    <img class="card__img grayscale" src="./images/Void.png" alt="страх" />
+                    <img class="card__img grayscale" src="./images/Void.jpg" alt="страх" />
                     <p class="watermark">&lt;страх&gt;</p>
                 </div>
                 <div class="card__description">
@@ -156,7 +156,7 @@
             <article class="card">
                 <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
                 <div class="card__img__container">
-                    <img class="card__img invert" src="./images/Enthusiasm.png" alt="принятие" />
+                    <img class="card__img invert" src="./images/Enthusiasm.jpg" alt="принятие" />
                     <p class="watermark">&lt;принятие&gt;</p>
                 </div>
                 <div class="card__description">
@@ -240,7 +240,7 @@
             <article class="card">
                 <h2 class="card__title">3 спринт: Обходные стратегии</h2>
                 <div class="card__img__container">
-                    <img class="card__img sepia" src="./images/Aspiration.png" alt="удивление" />
+                    <img class="card__img sepia" src="./images/Aspiration.jpg" alt="удивление" />
                     <p class="watermark">&lt;удивление&gt;</p>
                 </div>
                 <div class="card__description">
