--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <article class="card">
                 <h2 class="card__title">1 спринт: А если не получится?</h2>
                 <div class="card__img__container">
-                    <img class="card__img contrast" src="./images/Euphoria.png" alt="счастье" />
+                    <img class="card__img contrast" src="./images/Euphoria.jpg" alt="счастье" />
                     <p class="watermark">&lt;счастье&gt;</p>
                 </div>
                 <div class="card__description">
@@ -198,7 +198,7 @@
             <article class="card">
                 <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
                 <div class="card__img__container">
-                    <img class="card__img blur-contrast" src="./images/Cherish.png" alt="поддержка" />
+                    <img class="card__img blur-contrast" src="./images/Cherish.jpg" alt="поддержка" />
                     <p class="watermark">&lt;поддержка&gt;</p>
                 </div>
                 <div class="card__description">
@@ -281,7 +281,7 @@
             <article class="card">
                 <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
                 <div class="card__img__container">
-                    <img class="card__img time-manage" src="./images/Metamorphosis.png" alt="тайм-менеджмент" />
+                    <img class="card__img time-manage" src="./images/Metamorphosis.jpg" alt="тайм-менеджмент" />
                     <p class="watermark">&lt;тайм-менеджмент&gt;</p>
                 </div>
                 <div class="card__description">
@@ -323,7 +323,7 @@
             <article class="card">
                 <h2 class="card__title">«Сейчас я здесь»</h2>
                 <div class="card__img__container">
-                    <img class="card__img hue-rotate" src="./images/Pride.png" alt="50/50" />
+                    <img class="card__img hue-rotate" src="./images/Pride.jpg" alt="50/50" />
                     <p class="watermark">&lt;и да и нет&gt;</p>
                 </div>
                 <div class="card__description">
