--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     Фритрек и нулевой спринт: Подготовка к работе
                 </h2>
                 <div class="card__img__container">
-                    <img class="card__img saturate-bright" src="./images/Auto.png" alt="шок" />
+                    <img class="card__img saturate-bright" src="./images/Airborne.jpg" alt="шок" />
                     <p class="watermark">&lt;шок&gt;</p>
                 </div>
                 <div class="card__description">
@@ -32,10 +32,11 @@
                         Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.
                     </p>
                     <p class="card__text">
-Место для ваших воспоминаний о начале обучения.                    </p>
+                        Место для ваших воспоминаний о начале обучения.
+                    </p>
                     <div class="button__container">
                         <button type="button" class="card__icon-button">
-                            <svg class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg aria-hidden="true" class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
                                     <path
                                         class="contour"
@@ -66,7 +67,7 @@
             <article class="card">
                 <h2 class="card__title">1 спринт: Я — чистый лист</h2>
                 <div class="card__img__container">
-                    <img class="card__img grayscale" src="./images/Auto.png" alt="страх" />
+                    <img class="card__img grayscale" src="./images/Aspiration.jpg" alt="страх" />
                     <p class="watermark">&lt;страх&gt;</p>
                 </div>
                 <div class="card__description">
@@ -79,7 +80,7 @@
                     </p>
                     <div class="button__container">
                         <button type="button" class="card__icon-button">
-                            <svg class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg aria-hidden="true" class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
                                     <path
                                         class="contour"
@@ -110,7 +111,7 @@
             <article class="card">
                 <h2 class="card__title">1 спринт: А если не получится?</h2>
                 <div class="card__img__container">
-                    <img class="card__img contrast" src="./images/Auto.png" alt="счастье" />
+                    <img class="card__img contrast" src="./images/Cherish.jpg" alt="счастье" />
                     <p class="watermark">&lt;счастье&gt;</p>
                 </div>
                 <div class="card__description">
@@ -122,7 +123,7 @@
                     </p>
                     <div class="button__container">
                         <button type="button" class="card__icon-button">
-                            <svg class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg aria-hidden="true" class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
                                     <path
                                         class="contour"
@@ -153,7 +154,7 @@
             <article class="card">
                 <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
                 <div class="card__img__container">
-                    <img class="card__img invert" src="./images/Auto.png" alt="принятие" />
+                    <img class="card__img invert" src="./images/Enthusiasm.jpg" alt="принятие" />
                     <p class="watermark">&lt;принятие&gt;</p>
                 </div>
                 <div class="card__description">
@@ -164,7 +165,7 @@
                     <p class="card__text">Место для ваших воспоминаний о начале второго спринта..</p>
                     <div class="button__container">
                         <button type="button" class="card__icon-button">
-                            <svg class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg aria-hidden="true" class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
                                     <path
                                         class="contour"
@@ -195,7 +196,7 @@
             <article class="card">
                 <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
                 <div class="card__img__container">
-                    <img class="card__img blur-contrast" src="./images/Auto.png" alt="поддержка" />
+                    <img class="card__img blur-contrast" src="./images/Euphoria.jpg" alt="поддержка" />
                     <p class="watermark">&lt;поддержка&gt;</p>
                 </div>
                 <div class="card__description">
@@ -206,7 +207,7 @@
                     <p class="card__text">Место для ваших воспоминаний об окончании второго спринта.</p>
                     <div class="button__container">
                         <button type="button" class="card__icon-button">
-                            <svg class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg aria-hidden="true" class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
                                     <path
                                         class="contour"
@@ -237,7 +238,7 @@
             <article class="card">
                 <h2 class="card__title">3 спринт: Обходные стратегии</h2>
                 <div class="card__img__container">
-                    <img class="card__img sepia" src="./images/Auto.png" alt="удивление" />
+                    <img class="card__img sepia" src="./images/Metamorphosis.jpg" alt="удивление" />
                     <p class="watermark">&lt;удивление&gt;</p>
                 </div>
                 <div class="card__description">
@@ -247,7 +248,7 @@
                     <p class="card__text">Место для ваших воспоминаний об окончании первого спринта.</p>
                     <div class="button__container">
                         <button type="button" class="card__icon-button">
-                            <svg class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg aria-hidden="true" class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
                                     <path
                                         class="contour"
@@ -278,7 +279,7 @@
             <article class="card">
                 <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
                 <div class="card__img__container">
-                    <img class="card__img time-manage" src="./images/Auto.png" alt="тайм-менеджмент" />
+                    <img class="card__img time-manage" src="./images/Void.jpg" alt="тайм-менеджмент" />
                     <p class="watermark">&lt;тайм-менеджмент&gt;</p>
                 </div>
                 <div class="card__description">
@@ -289,7 +290,7 @@
                     <p class="card__text">Место для ваших воспоминаний об окончании третьего спринта.</p>
                     <div class="button__container">
                         <button type="button" class="card__icon-button">
-                            <svg class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg aria-hidden="true" class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
                                     <path
                                         class="contour"
@@ -320,7 +321,7 @@
             <article class="card">
                 <h2 class="card__title">«Сейчас я здесь»</h2>
                 <div class="card__img__container">
-                    <img class="card__img hue-rotate" src="./images/Auto.png" alt="50/50" />
+                    <img class="card__img hue-rotate" src="./images/Pride.jpg" alt="50/50" />
                     <p class="watermark">&lt;и да и нет&gt;</p>
                 </div>
                 <div class="card__description">
@@ -331,7 +332,7 @@
                     <p class="card__text">Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.</p>
                     <div class="button__container">
                         <button type="button" class="card__icon-button">
-                            <svg class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg aria-hidden="true" class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="heart">
                                     <path
                                         class="contour"
