--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
                     <p class="card__text">
                         Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.
                     </p>
-                    <p class="card__text">
-                        Место для ваших воспоминаний о начале обучения.
-                    </p>
+                    <p class="card__text">Помню тот момент, когда только начинал этот путь. Было страшно и волнительно, но в то же время внутри горел огонь любопытства. Как будто стоишь перед закрытой дверью, за которой — неизведанный мир возможностей.</p>
                     <div class="button__container">
                         <button type="button" class="card__icon-button">
                             <svg aria-hidden="true" class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -67,7 +65,7 @@
             <article class="card">
                 <h2 class="card__title">1 спринт: Я — чистый лист</h2>
                 <div class="card__img__container">
-                    <img class="card__img grayscale" src="./images/Aspiration.jpg" alt="страх" />
+                    <img class="card__img grayscale" src="./images/Void.jpg" alt="страх" />
                     <p class="watermark">&lt;страх&gt;</p>
                 </div>
                 <div class="card__description">
@@ -75,9 +73,7 @@
                         На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из них — страх перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим ощущением
                         скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?
                     </p>
-                    <p class="card__text">
-                        Место для ваших воспоминаний о начале первого спринта.
-                    </p>
+                    <p class="card__text">Первые дни были наполнены поиском своего пути. Много ошибок, но каждая из них — это урок. Я учился на своих промахах, анализировал, менял подход. Это было похоже на сборку пазла, где некоторые детали никак не хотели вставать на место.</p>
                     <div class="button__container">
                         <button type="button" class="card__icon-button">
                             <svg aria-hidden="true" class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -111,16 +107,14 @@
             <article class="card">
                 <h2 class="card__title">1 спринт: А если не получится?</h2>
                 <div class="card__img__container">
-                    <img class="card__img contrast" src="./images/Cherish.jpg" alt="счастье" />
+                    <img class="card__img contrast" src="./images/Euphoria.jpg" alt="счастье" />
                     <p class="watermark">&lt;счастье&gt;</p>
                 </div>
                 <div class="card__description">
                     <p class="card__text">
                         Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро померкнуть и смениться ожиданием провала. Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
                     </p>
-                    <p class="card__text">
-                        Место для ваших воспоминаний о начале третьего спринта.
-                    </p>
+                    <p class="card__text">Были моменты, когда хотелось всё бросить. Но именно в эти моменты я вспоминал, зачем начал этот путь. Каждая преодолённая трудность делала меня сильнее. Это как тренировка в спортзале — больно, но результат того стоит.</p>
                     <div class="button__container">
                         <button type="button" class="card__icon-button">
                             <svg aria-hidden="true" class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -162,7 +156,7 @@
                         На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли попытаться погнаться за идеалом и понять, что он недостижим. А, может, вы вовсе и не подвержены
                         перфекционизму и вместо того, чтобы сделать идеально, старались просто сделать.
                     </p>
-                    <p class="card__text">Место для ваших воспоминаний о начале второго спринта..</p>
+                    <p class="card__text">Первый успех — это как глоток свежего воздуха. Ты понимаешь, что всё не зря. Эти маленькие победы вдохновляли двигаться дальше, ставить новые цели.</p>
                     <div class="button__container">
                         <button type="button" class="card__icon-button">
                             <svg aria-hidden="true" class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -196,7 +190,7 @@
             <article class="card">
                 <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
                 <div class="card__img__container">
-                    <img class="card__img blur-contrast" src="./images/Euphoria.jpg" alt="поддержка" />
+                    <img class="card__img blur-contrast" src="./images/Cherish.jpg" alt="поддержка" />
                     <p class="watermark">&lt;поддержка&gt;</p>
                 </div>
                 <div class="card__description">
@@ -204,7 +198,7 @@
                         Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). Вас окружали одногруппники, команда сопровождения и просто близкие люди, которым можно пожаловаться, если
                         очередной макет просто так не поддавался. Осваивать что-то новое легче, когда рядом есть единомышленники, не правда ли?
                     </p>
-                    <p class="card__text">Место для ваших воспоминаний об окончании второго спринта.</p>
+                    <p class="card__text">Период интенсивного обучения. Каждый день приносил что-то новое. Было непросто, но невероятно интересно. Как будто открываешь в себе новые способности, о которых даже не подозревал.</p>
                     <div class="button__container">
                         <button type="button" class="card__icon-button">
                             <svg aria-hidden="true" class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -238,14 +232,14 @@
             <article class="card">
                 <h2 class="card__title">3 спринт: Обходные стратегии</h2>
                 <div class="card__img__container">
-                    <img class="card__img sepia" src="./images/Metamorphosis.jpg" alt="удивление" />
+                    <img class="card__img sepia" src="./images/Aspiration.jpg" alt="удивление" />
                     <p class="watermark">&lt;удивление&gt;</p>
                 </div>
                 <div class="card__description">
                     <p class="card__text">
                         На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто иссякли. Значит, пришло время посмотреть на задачу под другим углом.
                     </p>
-                    <p class="card__text">Место для ваших воспоминаний об окончании первого спринта.</p>
+                    <p class="card__text">Открылись новые возможности, появились смелые идеи. Казалось, что теперь можно достичь всего, чего захочу. Это был период больших планов и грандиозных замыслов.</p>
                     <div class="button__container">
                         <button type="button" class="card__icon-button">
                             <svg aria-hidden="true" class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -279,7 +273,7 @@
             <article class="card">
                 <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
                 <div class="card__img__container">
-                    <img class="card__img time-manage" src="./images/Void.jpg" alt="тайм-менеджмент" />
+                    <img class="card__img time-manage" src="./images/Metamorphosis.jpg" alt="тайм-менеджмент" />
                     <p class="watermark">&lt;тайм-менеджмент&gt;</p>
                 </div>
                 <div class="card__description">
@@ -287,7 +281,7 @@
                         Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора сдавать, и задачи хочется порешать, и в теории получше разобраться, и жизнь не забыть пожить. В такие моменты очень
                         нужна концентрация. Вспомните, откуда вы её черпали.
                     </p>
-                    <p class="card__text">Место для ваших воспоминаний об окончании третьего спринта.</p>
+                    <p class="card__text">Самые сложные моменты — это когда нужно преодолеть не внешние препятствия, а себя. Своё мышление, страхи, сомнения. Но именно эти моменты делают нас сильнее.</p>
                     <div class="button__container">
                         <button type="button" class="card__icon-button">
                             <svg aria-hidden="true" class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -329,7 +323,7 @@
                         Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди ещё много материала про «красотищу». Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И этот мир
                         постоянно меняется. Познать его полностью не получится, но это тот случай, когда важен сам процесс познания. Ведь часто путь — и есть результат.
                     </p>
-                    <p class="card__text">Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.</p>
+                    <p class="card__text">Этот путь научил меня главному — нет ничего невозможного, если есть желание и готовность работать над собой. Каждая точка этого пути — это не просто этап, а часть моего роста и развития.</p>
                     <div class="button__container">
                         <button type="button" class="card__icon-button">
                             <svg aria-hidden="true" class="like-icon" viewBox="0 0 39 35" fill="none" xmlns="http://www.w3.org/2000/svg">
